src/Components/Xs/xs.css
.background {
  background: #b1a188;
  width: 100vw;
  height: 100vh;
  box-sizing: border-box;
}
.big-box {
  width: 100vw;
  padding: 0 4%;
  box-sizing: border-box;
  display: flex;
}
.side-bar {
  max-width: 420px;
}
.size-name {
  text-shadow: 0px 0px 6.6299638748168945px #177c90;
  font-family: Quicksand;
  font-size: 340px;
  font-weight: 700;
  line-height: 320px;
  letter-spacing: -9px;
  color: #b1a188;
}
.copy {
  margin: -170px 50px 0 50px;
  color: #fff;
  font-family: Hind Siliguri;
  font-size: 34px;
  font-style: normal;
  font-weight: 400;
  line-height: 40px;
  
}
.image-section {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 100px auto;
  width: 100%;
  padding-left: 30px;
  gap: 30px;
}
.inner-header {
  grid-column: 1/3;
  display: flex;
  justify-content: space-between;
  margin: 40px 0;
}
.inner-items {
  color: #fff;
  font-family: Hind Siliguri;
  font-size: 20px;
  font-weight: 700;
}
.inner-items:hover {
  color: #a5e5f2;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
.active {
  color: #a5e5f2;
  font-family: Hind Siliguri;
  font-size: 20px;
  font-weight: 700;
}
.img-container{
    grid-column: 1/4;
}
.img-box {
  grid-column: 1/4;
  display: flex;
  
}
.sub-xs{
color: #fff;
margin: 0;
padding: 0;
text-transform: uppercase;
font-weight: 400;
}
.single-box{
width: 150px;
height: 150px;
overflow: hidden;
display: flex;
position: relative;
align-items: center;
justify-content: center;
margin-right: 8px;
}
img {
  width: 100%;
  height: 100%;
  -webkit-transition: width 1s, height 1s;
  transition: width 1s, height 1s;
  
}
img:hover{
    width: 300px;
    height: 300px;
}
.boxes-in-page{
    float: right;
  margin-top: -230px;
}

